--- a/nginx_proxy/認証を入れる前.conf
+++ b/nginx_proxy/認証を入れる前.conf
@@ -7,7 +7,7 @@
 server {
     # HTTPを利用する設定
     listen       80;
-    server_name  udemy-flask-sample.top;
+    server_name  udemy-flask-sample.work;
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log;
 
@@ -28,7 +28,7 @@ server {
 server {
     # HTTPを利用する設定
     listen       80;
-    server_name  api.udemy-flask-sample.top;
+    server_name  api.udemy-flask-sample.work;
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
 
@@ -74,7 +74,7 @@ server {
     # HTTPSを利用する設定
     listen       443 ssl http2;
 
-    server_name  udemy-flask-sample.top;
+    server_name  udemy-flask-sample.work;
 
     access_log /var/log/nginx/access.log main;
     error_log /var/log/nginx/error.log warn;
@@ -91,8 +91,8 @@ server {
     charset UTF-8;
 
     # ゲストOS上の証明書とキー配置設定
-    ssl_certificate      /etc/letsencrypt/live/udemy-flask-sample.top/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/udemy-flask-sample.top/privkey.pem;
+    ssl_certificate      /etc/letsencrypt/live/udemy-flask-sample.work/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/udemy-flask-sample.work/privkey.pem;
 
     # oauth2 配下は全てoauthproxy2へ行くようにする
     #location /oauth2/ {
@@ -203,8 +203,8 @@ server {
     charset UTF-8;
 
     # ゲストOS上の証明書とキー配置設定
-    ssl_certificate      /etc/letsencrypt/live/api.udemy-flask-sample.top/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/api.udemy-flask-sample.top/privkey.pem;
+    ssl_certificate      /etc/letsencrypt/live/api.udemy-flask-sample.work/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/api.udemy-flask-sample.work/privkey.pem;
 
     location / {
 
